syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package cache;

service RemoteCache {
  rpc Get (GetRequest) returns (GetReply) {}
  rpc Heartbeat (HeartbeatRequest) returns (google.protobuf.Empty) {}
  rpc Set (SetRequest) returns (google.protobuf.Empty) {}
}

message GetRequest {
  bytes key = 1;
  bool assign = 2;
}

message GetReply {
  oneof entry_status {
    google.protobuf.Empty unassigned = 1;
    int64 assign = 2;
    google.protobuf.Timestamp loading = 3;
    bytes ready = 4;
  }
}

message HeartbeatRequest {
  int64 id = 1;
}

message SetRequest {
  int64 id = 1;
  bytes value = 2;
}
